force-app/main/default/objects/Country__mdt/fields/ISO2__c.field-meta.xml
<CustomField>
    <fullName>ISO2__c</fullName>
    <description>ISO2 Country Code</description>
    <inlineHelpText>ISO2 Country Code</inlineHelpText>
    <label>ISO2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>