force-app/main/default/objects/Country__mdt/fields/ISO3__c.field-meta.xml
<CustomField>
    <fullName>ISO3__c</fullName>
    <description>ISO3 Country Code</description>
    <inlineHelpText>ISO3 Country Code</inlineHelpText>
    <label>ISO3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>