force-app/main/default/objects/Country__mdt/fields/StatesJSON__c.field-meta.xml
<CustomField>
    <fullName>StatesJSON__c</fullName>
    <description>State Data in JSON format.</description>
    <inlineHelpText>State Data in JSON format.</inlineHelpText>
    <label>States (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>